LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/FloQast_User_Stage__c.object-meta.xml
<CustomObject>
    <description>2019-12-12 - N. Ehrmann - These objects are staging records for a regular user upload from the FQ app. These will then be processed by FQTriggerHelper to apply updates to existing Contact and Account records.</description>
    <label>FloQast User Stage</label>
    <nameField>
        <displayFormat>FQU-{000000}</displayFormat>
        <label>FloQast User Stage Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FloQast User Stage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>