LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2019-12-12 - N. Ehrmann - The updated Account.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FloQast User Stage</relationshipLabel>
    <relationshipName>FloQast_User_Stage</relationshipName>
    <type>Lookup</type>
</CustomField>