LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Change_Summary__c.field-meta.xml
<CustomField>
    <fullName>Change_Summary__c</fullName>
    <description>2020-05-04 - N. Ehrmann - AUTO - Populated by FQUserProcess. Summarizes the changes made to records.</description>
    <label>Change Summary</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>