LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>2019-12-12 - N. Ehrmann - The updated / created Contact.</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>FloQast User Stage</relationshipLabel>
    <relationshipName>FloQast_User_Stage</relationshipName>
    <type>Lookup</type>
</CustomField>