LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Date_Activated__c.field-meta.xml
<CustomField>
    <fullName>Date_Activated__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to CONTACT . Date_Activated__c.</description>
    <label>Date Activated</label>
    <type>Date</type>
</CustomField>