LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Date_Deactivated__c.field-meta.xml
<CustomField>
    <fullName>Date_Deactivated__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to CONTACT . Date_Deactivated__c.</description>
    <label>Date Deactivated</label>
    <type>Date</type>
</CustomField>