LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to CONTACT . Email.</description>
    <label>Email</label>
    <length>100</length>
    <type>Text</type>
</CustomField>