LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <description>2019-12-12 - N. Ehrmann - If an error occurs during processing, it will be stamped into this field.</description>
    <label>Error</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>