LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FirstName__c.field-meta.xml
<CustomField>
    <fullName>FirstName__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to CONTACT . FirstName.</description>
    <label>First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>