LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_Calendar_Types__c.field-meta.xml
<CustomField>
    <fullName>FloQast_Calendar_Types__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to ACCOUNT . FloQast_Calendar_Types__c.</description>
    <label>Calendar Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>