LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_Cloud_Connect__c.field-meta.xml
<CustomField>
    <fullName>FloQast_Cloud_Connect__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2019-12-12 - N. Ehrmann - This field maps to ACCOUNT . FloQast_Cloud_Connect__c.</description>
    <label>Cloud Connect</label>
    <type>Checkbox</type>
</CustomField>