LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_Due_Dates__c.field-meta.xml
<CustomField>
    <fullName>FloQast_Due_Dates__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to ACCOUNT . FloQast_Due_Dates__c.</description>
    <label>Due Dates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>