LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_Modules__c.field-meta.xml
<CustomField>
    <fullName>FloQast_Modules__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to ACCOUNT . FloQast_Modules__c.</description>
    <label>Modules</label>
    <length>255</length>
    <type>Text</type>
</CustomField>