LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_MultiBook_Reconciliation__c.field-meta.xml
<CustomField>
    <fullName>FloQast_MultiBook_Reconciliation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2019-12-12 - N. Ehrmann - This field maps to ACCOUNT . FloQast_MultiBook_Reconciliation__c.</description>
    <label>Multibook Reconciliation</label>
    <type>Checkbox</type>
</CustomField>