LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_Permfile_Entity_Level__c.field-meta.xml
<CustomField>
    <fullName>FloQast_Permfile_Entity_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2019-12-12 - N. Ehrmann - This field maps to ACCOUNT . FloQast_Permfile_Entity_Level__c.</description>
    <label>Permfile Entity Level</label>
    <type>Checkbox</type>
</CustomField>