LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_Positive_Rec_Values__c.field-meta.xml
<CustomField>
    <fullName>FloQast_Positive_Rec_Values__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2019-12-12 - N. Ehrmann - This field maps to ACCOUNT . FloQast_Positive_Rec_Values__c.</description>
    <label>Positive Rec Values</label>
    <type>Checkbox</type>
</CustomField>