LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_Reconciliation_Signatures__c.field-meta.xml
<CustomField>
    <fullName>FloQast_Reconciliation_Signatures__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2019-12-12 - N. Ehrmann - This field maps to ACCOUNT . FloQast_Reconciliation_Signatures__c.</description>
    <label>Reconciliation Signatures</label>
    <type>Checkbox</type>
</CustomField>