LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_Role__c.field-meta.xml
<CustomField>
    <fullName>FloQast_Role__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to CONTACT . FloQast_Role__c.</description>
    <label>Role</label>
    <length>50</length>
    <type>Text</type>
</CustomField>