LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_SADL_Enabled__c.field-meta.xml
<CustomField>
    <fullName>FloQast_SADL_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2019-12-12 - N. Ehrmann - This field maps to ACCOUNT . FloQast_SADL_Enabled__c.</description>
    <label>SADL Enabled</label>
    <type>Checkbox</type>
</CustomField>