LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_Shared_General_Ledger__c.field-meta.xml
<CustomField>
    <fullName>FloQast_Shared_General_Ledger__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2019-12-12 - N. Ehrmann - This field maps to ACCOUNT . FloQast_Shared_General_Ledger__c.</description>
    <label>Shared General Ledger</label>
    <type>Checkbox</type>
</CustomField>