LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_Status__c.field-meta.xml
<CustomField>
    <fullName>FloQast_Status__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to CONTACT . FloQast_Status__c.</description>
    <label>Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>