LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_Strict_Signoff_Mode__c.field-meta.xml
<CustomField>
    <fullName>FloQast_Strict_Signoff_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2019-12-12 - N. Ehrmann - This field maps to ACCOUNT . FloQast_Strict_Signoff_Mode__c.</description>
    <label>Strict Signoff Mode</label>
    <type>Checkbox</type>
</CustomField>