LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_Tags__c.field-meta.xml
<CustomField>
    <fullName>FloQast_Tags__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to ACCOUNT . FloQast_Tags__c.</description>
    <label>Tags</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>