LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/FloQast_TLC_Entities__c.field-meta.xml
<CustomField>
    <fullName>FloQast_TLC_Entities__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to ACCOUNT . FloQast_TLC_Entities__c.</description>
    <label>TLC Entities</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>