LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Job_Title__c.field-meta.xml
<CustomField>
    <fullName>Job_Title__c</fullName>
    <description>2020-05-04 - N. Ehrmann - AUTO - The Job Title, as delivered from the FQ app. When users register in FQ, they are given a dropdown for job titles, so this might not be as descriptive as the job title on the associated Contact.</description>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>