LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/LastName__c.field-meta.xml
<CustomField>
    <fullName>LastName__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to CONTACT . LastName</description>
    <label>Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>