LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <defaultValue>&quot;Not Processed&quot;</defaultValue>
    <description>2019-12-12 - N. Ehrmann - The status of record processing. Defaults to &quot;Not Processed&quot; and updated via Apex Trigger.</description>
    <label>Processing Status</label>
    <length>40</length>
    <type>Text</type>
</CustomField>