LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Reprocess__c.field-meta.xml
<CustomField>
    <fullName>Reprocess__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2019-12-12 - N. Ehrmann - This box can be checked (via Quick Action) to reprocess the record (in the event that it fails).</description>
    <label>Reprocess</label>
    <type>Checkbox</type>
</CustomField>