LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Run_Date__c.field-meta.xml
<CustomField>
    <fullName>Run_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>2020-01-03 - J. Kim - AUTO - The date that a batch of FQU records was loaded.</description>
    <label>Run Date</label>
    <type>Date</type>
</CustomField>