LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/SF_ID__c.field-meta.xml
<CustomField>
    <fullName>SF_ID__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to CONTACT . AccountId.</description>
    <label>SF ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>