LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Slack_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Slack_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>2020-05-04 - N. Ehrmann - AUTO - Whether or not the User (Contact) is using Slack notifications.</description>
    <label>Slack Notifications</label>
    <type>Checkbox</type>
</CustomField>