LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/User_ID__c.field-meta.xml
<CustomField>
    <fullName>User_ID__c</fullName>
    <description>2019-12-12 - N. Ehrmann - This field maps to CONTACT . FloQast_User_Id__c.</description>
    <label>User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>