LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Year_End__c.field-meta.xml
<CustomField>
    <fullName>Year_End__c</fullName>
    <description>2020-05-04 - N. Ehrmann - AUTO - The year end date for the Account. This will be interpreted to a text month for storage on the Account record.</description>
    <label>Year End</label>
    <type>Date</type>
</CustomField>