LWCLearnwithFLOWOrg/force-app/main/default/objects/FloQast_User_Stage__c/fields/Year_End_txt__c.field-meta.xml
<CustomField>
    <fullName>Year_End_txt__c</fullName>
    <description>2020-05-04 - N. Ehrmann - AUTO - The text value &quot;MM-DD&quot; for the Fiscal Year End of the customer. This is interpreted during processing to match the picklist values on Account.</description>
    <label>Year End</label>
    <length>20</length>
    <type>Text</type>
</CustomField>